--- a/src/App.css
+++ b/src/App.css
@@ -27,9 +27,10 @@
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+@media (prefers-reduced-motion: reduce) {
+  .animate-slideDown,
+  .animate-fadeIn {
+    animation: none;
   }
 }
 
