--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,11 @@ body {
   min-width: 320px;
   min-height: 100vh;
 }
+
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE & Edge */
+  scrollbar-width: none;     /* Firefox */
+}
+.no-scrollbar::-webkit-scrollbar {
+  display: none;             /* Chrome, Safari, Opera */
+}
